tests/compile-fail/unexpected_literal.stderr
error: unexpected literal
 --> tests/compile-fail/unexpected_literal.rs:6:28
  |
6 | #[enum_tools(sorted(name = 6))]
  |                            ^
